# aws-rest-proto

./: CMakeLists.txt  README.md
include/aws-rest-proto/: arp.h  aws_client_request.h  client_request.h  cognito-idp.h  fields.h  parameters.h  payload.h  request_response_lang.h  request_response_lang_fwd.h  tuple.h
include/aws-rest-proto/detail/: aws_client_request.h  callback_handler.h  client_request.h  item.h  request_response_lang.h  string.h
src/: aws_client_request.cpp  client_request.cpp  digest.h  encode.cpp  encode.h
